# retinal_spot_size

./: '  ErrCalc.gnuplot  FullErrCalc.gnuplot  PrelimError.eps  Vincelette-RefractiveError.csv  eye_ROC.csv  eye_length.csv  gitscript  n-perc.csv  n_perc.csv  paramVariation.eps  percDiff.eps  percErrAnalysis.csv  percErrCalc.gnuplot  pyproject.toml  retina_spot_diameter.txt  script.py  sellmeierEquation.eps  sellmeierfit.gnuplot  z0.csv
retinal_spot_size/: .cli.py.swp  .eye_ABCD.py.swp  .utils.py.swp  ABCD.py  __init__.py  cli.py  eye_ABCD.py  eye_properties.py  percent_analysis.py  utils.py
tests/: __init__.py  test_analysis.py  test_gbp.py  test_pint.py
