[tool.poetry]
name = "retinal-spot-size"
version = "0.1.0"
description = ""
authors = ["Daniel Huantes <daniel.huantesjr@gmail.com>"]
readme = "README.md"
packages = [{include = "retinal_spot_size"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytest = "^7.2.1"
numpy = "^1.24.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
typer = "^0.7.0"
pint = "^0.20.1"
pytest-pudb = "^0.7.0"

[tool.poetry.scripts]
rss = "retinal_spot_size.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
